--- a/horizontalProject/mobile.css
+++ b/horizontalProject/mobile.css
@@ -10,7 +10,7 @@
 body {
     /* background-color: #ffffff; */
     width: 100%;
-    height: 100vh;
+    height: 100%;
 
     overscroll-behavior: none;
     background-color: black;
