--- a/introDemo/demo.css
+++ b/introDemo/demo.css
@@ -82,6 +82,8 @@ video {
     width: 100%;
     height: 100%;
     position: absolute;
+    top: 0;
+    left: 0;
     object-fit: cover;
 }
 
@@ -89,6 +91,7 @@ video {
     padding: 2rem;
     background-color: black;
     position: absolute;
+    transition: opacity 0.2s;
 }
 
 .paragraph {
@@ -98,4 +101,38 @@ video {
 
 .textBox {
     opacity: 0;
+}
+
+.test {
+    opacity: 1;
+    transition: opacity 0.3s ease-in-out;
+    background-color: black;
+    color: white;
+    font-size: 1.5rem;
+    padding: 2rem;
+}
+
+.video {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+}
+
+.video video {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.video img {
+    width: 100%;
+    height: 100vh;
+    opacity: 0.1;
+    position: absolute;
+}
+
+.boxContainer {
+
 }
