--- a/introDemo/demo.css
+++ b/introDemo/demo.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,400;0,500;0,600;1,600&display=swap');
 html, body {
     position: relative;
     height: 100%;
@@ -5,7 +6,8 @@ html, body {
 
 body {
     background: #eee;
-    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+    /* font-family: Helvetica Neue, Helvetica, Arial, sans-serif; */
+    font-family: 'Roboto Mono', monospace;
     font-size: 14px;
     color: #000;
     margin: 0;
@@ -35,6 +37,9 @@ body {
     -ms-flex-align: center;
     -webkit-align-items: center;
     align-items: center;
+
+    /* prevent flickering in safari */
+    -webkit-transform: translate3d(0, 0, 0);
 }
 
 .swiper-slide img {
@@ -67,7 +72,9 @@ body {
 }
 
 .title {
-    font-size: 50px;
+    font-size: 5rem;
+    font-weight: 600;
+    text-transform: uppercase;
 }
 
 #swiper-wrapper-test2 .swiper-slide {
@@ -135,4 +142,41 @@ video {
 
 .boxContainer {
 
+}
+
+.beginBtn {
+    margin: 2rem;
+    font-size: 1.5rem;
+    background-color: white;
+    color: black;
+    padding: 1rem;
+    border-radius: 10%;
+}
+
+p {
+    margin: 0;
+}
+
+.storyContainer {
+    height: 100%;
+    width: 100%;
+    display: flex;
+}
+
+.story {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.story img {
+    height: 100%;
+    position: relative;
+    filter: brightness(0.5);
+}
+
+.storyInfo {
+    position: absolute;
+    color: white;
 }
