--- a/introDemo/demo.css
+++ b/introDemo/demo.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,400;0,500;0,600;1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@400;700&display=swap');
 html, body {
     position: relative;
     height: 100%;
@@ -8,6 +9,7 @@ body {
     background: #eee;
     /* font-family: Helvetica Neue, Helvetica, Arial, sans-serif; */
     font-family: 'Roboto Mono', monospace;
+    font-family: 'Gowun Batang', serif;
     font-size: 14px;
     color: #000;
     margin: 0;
@@ -72,9 +74,16 @@ body {
 }
 
 .title {
-    font-size: 5rem;
+    font-size: 5.5rem;
     font-weight: 600;
     text-transform: uppercase;
+    margin: 2rem;
+}
+
+.soundCon {
+    font-size: 1.5rem;
+    margin: 2rem;
+    color: gray;
 }
 
 #swiper-wrapper-test2 .swiper-slide {
@@ -136,7 +145,7 @@ video {
 .video img {
     width: 100%;
     height: 100vh;
-    opacity: 0.1;
+    opacity: 0.05;
     position: absolute;
 }
 
@@ -145,11 +154,14 @@ video {
 }
 
 .beginBtn {
+    cursor: pointer;
     margin: 2rem;
     font-size: 1.5rem;
     background-color: white;
     color: black;
     padding: 1rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
     border-radius: 10%;
 }
 
@@ -168,15 +180,64 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex: 1;
+    transition: all 0.5s;
 }
 
-.story img {
+.story video {
     height: 100%;
     position: relative;
-    filter: brightness(0.5);
+    cursor: pointer;
+    filter: grayscale() brightness(0.5);
+    transition: all 0.5s;
 }
+
+/* .story img {
+    height: 100%;
+    position: relative;
+    filter: grayscale() brightness(0.5);
+    transition: all 0.5s;
+    cursor: pointer;
+} */
 
 .storyInfo {
     position: absolute;
     color: white;
+    bottom: 0;
+    margin-bottom: 5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
+
+.empty {
+    opacity: 0;
+}
+
+.storyTitle {
+    font-size: 1.8rem;
+    background-color: black;
+}
+
+.storyBtn {
+    opacity: 0;
+    margin: 2rem;
+    font-size: 1.5rem;
+    background-color: white;
+    color: black;
+    padding: 1rem;
+    border-radius: 10%;
+}
+
+.videoBtn {
+    cursor: pointer;
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    background-color: green;
+    z-index: 10;
+}
+
+.swiper-pagination-bullet { width: 12px; height: 12px; background: transparent; border: 1px solid pink; opacity: 1; }
+.swiper-pagination-bullet-active { width: 40px; transition: width .5s; border-radius: 5px; background: pink; border: 1px solid transparent; }
