--- a/scrollCubeExample/example.css
+++ b/scrollCubeExample/example.css
@@ -12,11 +12,24 @@ body {
     width: 100%;
     height: 100%;
     position: fixed;
-    z-index: 999;
+    z-index: 0;
 }
   
 section {
     width: 100%;
     height: 100vh;  
     position: relative;
+}
+
+.button {
+    width: 100px;
+    height: 100px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    border: 1px solid;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
 }
